# FreeFontConverter

./: .gitignore  CMakeLists.txt  Makefile  README.md  freeFontConverter
inc/: fontHeader.h
sample/: OpenSansRegular_10.h  OpenSansRegular_12.h  OpenSansRegular_14.h  OpenSansRegular_16.h  OpenSansRegular_18.h  OpenSansRegular_20.h  OpenSansRegular_22.h  OpenSansRegular_24.h  OpenSansRegular_72.h  OpenSansRegular_8.h  ProggyTiny_16.h  monobit_16.h  run_tests.sh
sample/fonts/M5/petiote/: Readme.txt
sample/fonts/M7/adore64/: Readme.txt
sample/fonts/M7/power_pixel_7/: readme.txt
sample/fonts/M7/proggy_tiny/: ProggyTinySZ.fon
src/: main.c
